--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -28,19 +28,16 @@ import SectionTitle from '../components/SectionTitle.astro';
         <!-- Trail Arbas Infinito -->
         <ResultsCard title="Trail Arbas Infinito">
           <CategoryResults categoryName="Categoría Masculina">
-            <RunnerItem position={1} name="Alejandro Martínez" time="3h 14m 27s" />
-            <RunnerItem position={2} name="Carlos Rodríguez" time="3h 18m 05s" />
-            <RunnerItem position={3} name="David López" time="3h 25m 42s" />
-            <RunnerItem position={4} name="Sergio González" time="3h 27m 13s" />
-            <RunnerItem position={5} name="Javier Fernández" time="3h 30m 58s" />
+            <RunnerItem position={1} name="Pablo SANTOS MARTIN" time="3h 06m 24s" />
+            <RunnerItem position={2} name="Carlos VELASCO OLMOS" time="3h 10m 44s" />
+            <RunnerItem position={3} name="Javier DONAIRE CASTILLO" time="3h 12M 32s" />
+      
           </CategoryResults>
           
           <CategoryResults categoryName="Categoría Femenina">
-            <RunnerItem position={1} name="Lucía García" time="3h 42m 18s" />
-            <RunnerItem position={2} name="María Pérez" time="3h 50m 24s" />
-            <RunnerItem position={3} name="Sara Alonso" time="3h 55m 09s" />
-            <RunnerItem position={4} name="Andrea Sánchez" time="4h 01m 37s" />
-            <RunnerItem position={5} name="Carmen Martín" time="4h 08m 45s" />
+            <RunnerItem position={1} name="Itziar GORTAZAR MERAY" time="3h 35m 10s" />
+            <RunnerItem position={2} name=" Maria Del Carmen BUENO VILLASUR" time="4h 04m 59s" />
+            <RunnerItem position={3} name="Marta CABRERA FERNANDEZ" time="4h 36 36s" />
           </CategoryResults>
           
           <RecordBox 
