--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -82,7 +82,7 @@
       <h3 class="text-2xl font-bold text-[#f5f5f6] mb-4">Contacto</h3>
   <ul class="flex flex-col gap-3 footer-list">
         <li>
-          <a href="mailto:correo@ejemplo.com" class="list-item hover:text-[#e49a69] transition-colors">
+          <a href="mailto:valledearbas@gmail.com" class="list-item hover:text-[#e49a69] transition-colors">
             <svg
               class="w-6 h-6 text-[#e49a69]"
               aria-hidden="true"
@@ -100,7 +100,7 @@
                 d="M11 16v-5.5A3.5 3.5 0 0 0 7.5 7m3.5 9H4v-5.5A3.5 3.5 0 0 1 7.5 7m3.5 9v4M7.5 7H14m0 0V4h2.5M14 7v3m-3.5 6H20v-6a3 3 0 0 0-3-3m-2 9v4m-8-6.5h1"
               ></path>
             </svg>
-            <span class="text-[#f5f5f6]"> correo@ejemplo.com </span>
+            <span class="text-[#f5f5f6]"> valledearbas@gmail.com </span>
           </a>
         </li>
         <li>
@@ -122,7 +122,7 @@
                 d="M18.427 14.768 17.2 13.542a1.733 1.733 0 0 0-2.45 0l-.613.613a1.732 1.732 0 0 1-2.45 0l-1.838-1.84a1.735 1.735 0 0 1 0-2.452l.612-.613a1.735 1.735 0 0 0 0-2.452L9.237 5.572a1.6 1.6 0 0 0-2.45 0c-3.223 3.2-1.702 6.896 1.519 10.117 3.22 3.221 6.914 4.745 10.12 1.535a1.601 1.601 0 0 0 0-2.456Z"
               ></path>
             </svg>
-            <span class="text-[#f5f5f6]"> +34 123 456 789 </span>
+            <span class="text-[#f5f5f6]"> +34 637540457 </span>
           </a>
         </li>
         <li>
