COMETAR CATEGORIAS INFERIORES

--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -37,12 +37,12 @@ import SectionTitle from '../components/SectionTitle.astro';
           <CategoryResults categoryName="Categoría Femenina">
             <RunnerItem position={1} name="Itziar GORTAZAR MERAY" time="3h 35m 10s" />
             <RunnerItem position={2} name=" Maria Del Carmen BUENO VILLASUR" time="4h 04m 59s" />
-            <RunnerItem position={3} name="Marta CABRERA FERNANDEZ" time="4h 36 36s" />
+            <RunnerItem position={3} name="Marta CABRERA FERNANDEZ" time="4h 36M 36s" />
           </CategoryResults>
           
           <RecordBox 
-            maleRecord={{ name: "Pedro Gómez", time: "3h 10m 22s", year: "2024" }}
-            femaleRecord={{ name: "Lucía García", time: "3h 42m 18s", year: "2025" }}
+            maleRecord={{ name: "Pablo SANTOS MARTIN", time: "3h 06M 24s", year: "2025" }}
+            femaleRecord={{ name: "Itziar GORTAZAR MERAY", time: "3h 35m 10s", year: "2025" }}
           />
           
           <ResultsLink />
@@ -51,24 +51,21 @@ import SectionTitle from '../components/SectionTitle.astro';
         <!-- Trail Arbas-Luna -->
         <ResultsCard title="Trail Arbas-Luna">
           <CategoryResults categoryName="Categoría Masculina">
-            <RunnerItem position={1} name="Miguel Torres" time="1h 22m 15s" />
-            <RunnerItem position={2} name="Iván Sánchez" time="1h 24m 42s" />
-            <RunnerItem position={3} name="Pablo Ruiz" time="1h 27m 03s" />
-            <RunnerItem position={4} name="Adrián Castro" time="1h 29m 18s" />
-            <RunnerItem position={5} name="Jorge Blanco" time="1h 31m 40s" />
+            <RunnerItem position={1} name="Hugo CEREZO BLANCO" time="1h 19m 40s" />
+            <RunnerItem position={2} name="Miguel FERNANDEZ FERNANDEZ" time="1h 32m 58s" />
+            <RunnerItem position={3} name="Fabio GARCIA-HERAS HERNANDEZ" time="1h 33m 41s" />
+           
           </CategoryResults>
           
           <CategoryResults categoryName="Categoría Femenina">
-            <RunnerItem position={1} name="Elena Martínez" time="1h 38m 22s" />
-            <RunnerItem position={2} name="Laura Fernández" time="1h 41m 05s" />
-            <RunnerItem position={3} name="Cristina López" time="1h 44m 31s" />
-            <RunnerItem position={4} name="Marta Rodríguez" time="1h 47m 59s" />
-            <RunnerItem position={5} name="Silvia Vázquez" time="1h 50m 27s" />
+            <RunnerItem position={1} name="Maria Dolores OLIVERA CABO" time="1h 50m 24s" />
+            <RunnerItem position={2} name="Carmen RODRIGUEZ ALVAREZ" time="1h 54m 06s" />
+            <RunnerItem position={3} name="Maria Raquel FERNANDEZ GONZALEZ" time="1h 59m 28s" />
           </CategoryResults>
           
           <RecordBox 
-            maleRecord={{ name: "Miguel Torres", time: "1h 22m 15s", year: "2025" }}
-            femaleRecord={{ name: "Ana Díaz", time: "1h 35m 08s", year: "2024" }}
+            maleRecord={{ name: "Hugo CEREZO BLANCO", time: "1h 19m 40s", year: "2025" }}
+            femaleRecord={{ name: "Maria Dolores OLIVERA CABO", time: "1h 50m 24s", year: "2025" }}
           />
           
           <ResultsLink />
