--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -65,7 +65,7 @@ import SectionTitle from '../components/SectionTitle.astro';
           
           <RecordBox 
             maleRecord={{ name: "Hugo CEREZO BLANCO", time: "1h 19m 40s", year: "2025" }}
-            femaleRecord={{ name: "Maria Dolores OLIVERA CABO", time: "1h 50m 24s", year: "2025" }}
+            femaleRecord={{ name: "Maria Dolores OLIVERA CABO", time: "1h 50m s", year: "2025" }}
           />
           
           <ResultsLink />
@@ -73,7 +73,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       </div>
 
       <div class="mt-12 grid grid-cols-1 lg:grid-cols-2 gap-8">
-        Trail Sierra del Alceo
+        <!-- Trail Sierra del Alceo -->
         <ResultsCard title="Trail Sierra del Alceo">
           <CategoryResults categoryName="Categoría Cadete Masculino">
             <RunnerItem position={1} name="Daniel García" time="45m 33s" />
