--- a/src/components/results/ResultsLink.astro
+++ b/src/components/results/ResultsLink.astro
@@ -3,7 +3,7 @@ interface Props {
   url?: string;
 }
 
-const { url = "#" } = Astro.props;
+const { url = "https://youevent.es/sport/multimedia/clasificaciones/ClasificacionTrailValledeArbas2025-4.pdf" } = Astro.props;
 ---
 
 <div class="mt-6 text-center">
