--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -65,7 +65,7 @@ import SectionTitle from '../components/SectionTitle.astro';
           
           <RecordBox 
             maleRecord={{ name: "Hugo CEREZO BLANCO", time: "1h 19m 40s", year: "2025" }}
-            femaleRecord={{ name: "Maria Dolores OLIVERA CABO", time: "1h 50m s", year: "2025" }}
+            femaleRecord={{ name: "Maria Dolores OLIVERA CABO", time: "1h 50m 08s", year: "2025" }}
           />
           
           <ResultsLink />
@@ -123,7 +123,7 @@ import SectionTitle from '../components/SectionTitle.astro';
           <div class="gallery-album w-full md:w-auto">
             <h3 class="text-xl font-semibold mb-4 text-[#e49a69] sm:text-lg">Álbum Trail Valle de Arbas 2025</h3>
             <p class="mb-4">Todas las fotografías de la edición 2025 del Trail Valle de Arbas.</p>
-            <a href="#" class="inline-block px-6 py-3 w-full md:w-auto bg-gradient-to-r from-[#f97316] to-[#e49a69] text-white rounded-lg hover:from-[#e49a69] hover:to-[#f97316] transition-colors focus:outline-none focus:ring-2 focus:ring-[#e49a69]">
+            <a href="https://photos.google.com/share/AF1QipMFYlZBZO_WB5_xZ7myO3gv1oCftHZsKznnGBy4taS41W2aboaXPWNNwjdCiL77vQ?fbclid=PAQ0xDSwKdc0xleHRuA2FlbQIxMAABp9MEv2ecVCYAQWB2S3kz6cqesLbXBODaCkb9bykRT9Qzy6vtn73ScvEOhLob_aem_4A4CZtrff0E0ZXZz9eg5eg&key=UTBEX0VfZVUxTkFjMC1ISVJLaGxqaWdNQkhvMXRR" class="inline-block px-6 py-3 w-full md:w-auto bg-gradient-to-r from-[#f97316] to-[#e49a69] text-white rounded-lg hover:from-[#e49a69] hover:to-[#f97316] transition-colors focus:outline-none focus:ring-2 focus:ring-[#e49a69]">
               Ver galería completa
             </a>
           </div>
